Fri Jun 15 16:50:54 PDT 2001                    Michael Jennings (mej)

Cleaned up spec file in preparation for release.

----------------------------------------------------------------------
Fri Jun 15 17:31:34 2001                        Michael Jennings (mej)

Converted the ChangeLog to Avalon's log format.  Yay! :-)
----------------------------------------------------------------------
Fri Jun 15 23:40:45 2001                        Michael Jennings (mej)

Moved the parsing of each config file line into a separate function.
You'll see why in a moment.
----------------------------------------------------------------------
Mon Jun 18 13:49:24 2001                        Michael Jennings (mej)

Oops.  ChangeLog entries were ending up in the bit-bucket.  Fixed and
re-synced. :)
----------------------------------------------------------------------
Fri Jun 29 10:02:34 2001                        Michael Jennings (mej)

I think we can call this finished.
----------------------------------------------------------------------
Mon Jul 23 18:01:37 2001                        Michael Jennings (mej)

Well that was dumb.  Comments are supposed to be *ignored*. :P
----------------------------------------------------------------------
Mon Jul 23 23:25:13 2001                        Michael Jennings (mej)

Damnit.  It was screwing up on blank lines too. >:I
----------------------------------------------------------------------
Sat Sep 22 09:24:41 2001                        Michael Jennings (mej)

Fixed a compilation issue on some systems where libX11 would not be
linked in with the test program.  This is libast 0.4.
----------------------------------------------------------------------
Mon Jan 21 18:02:20 2002                        Michael Jennings (mej)

Don't try this at home.  This package has been discombobulated by
trained professionals.
----------------------------------------------------------------------